--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spacegray-chalk",
+  "name": "spacegray-chalk-syntax",
   "theme": "syntax",
   "version": "2.0.0",
   "description": "An Atom syntax theme package of my custom version of @kkga/Spacegray Eighties theme",
